examples/test/testpolicy11040.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11040
  namespace: namespace258
spec:
  podSelector:
    matchLabels:
      key29: value49
      key25: value4
      key46: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value36
          key32: value29
          key31: value29
      podSelector:
        matchLabels:
          key6: value36
          key46: value25
          key23: value44
